# sxs-interactive-plots

./: README.md  SXS Interactive Plots Remake.py  SXS Interactive Plots.ipynb  SXS Interactive Plots.py  SXSInteractivePlots.py  isxs_marimo.py  marimo_data.csv  pyproject.toml  remake_test.py  sxs_iplots.py  sxs_iplots_marimo.py  sxs_iplots_marimo_plotly.py  test.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: SXS Interactive Plots-checkpoint.ipynb  SXS Interactive Plots-checkpoint.py  isxs_marimo-checkpoint.py  premarimo_load-checkpoint.py  preprocessing testing-checkpoint.py  spare_code-checkpoint.py  sxs_iplots_marimo-checkpoint.py  sxs_iplots_marimo_plotly-checkpoint.py
binder/.ipynb_checkpoints/: environment-checkpoint.yml
document_root/simulations/: index.html
